test/errors/cpp_generator_error/zs/sql_table_row_class_clash_error.zs
package sql_table_row_class_clash_error;

sql_table Row
{
    uint32 id sql "PRIMARY KEY NOT NULL";
};
